[SH] Added more swagger doccumentation and parsed routes file into logical sub files
